fix(components-page.component): Fix spacing around the bottom buttons

--- a/form-builder/src/app/pages/form-creator/components-page/components-page.component.less
+++ b/form-builder/src/app/pages/form-creator/components-page/components-page.component.less
@@ -6,32 +6,37 @@ nz-layout {
 }
 
 #footerdiv {
-  margin-top: 1rem;
+  margin-top: @spacing12;
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: @spacing0;
+  right: @spacing0;
   width: @width-full;
   padding: @spacing12;
   background: @background-white;
-  border-top: 1px solid @border-gray;
+  border-top: @border-default;
 }
 
 .button-margin {
-  margin-left: 8px;
+  margin-left:  @spacing8;
+  margin-right: @spacing8;
 }
 
 .version-button {
-  margin-right: 8px;
+  margin-right: @spacing8;
 }
 
 .version-select {
-  margin-right: 8px;
+  margin-right: @spacing8;
 }
 
 .redo-undo-container {
-  margin-right: @spacing20;
+  margin-right: @spacing8;
 }
 
 .inline-edit-container {
   margin-right: @spacing20;
+}
+
+.full-width {
+  width: @width-full;
 }
